--- a/codelap-movie-main-ver1.html
+++ b/codelap-movie-main-ver1.html
@@ -82,22 +82,22 @@
             -webkit-overflow-scrolling: touch;
         }
 
-        .btn-bd-primary {
-            --bd-violet-bg: #712cf9;
-            --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
+        /*.btn-bd-primary {*/
+        /*    --bd-violet-bg: #712cf9;*/
+        /*    --bd-violet-rgb: 112.520718, 44.062154, 249.437846;*/
 
-            --bs-btn-font-weight: 600;
-            --bs-btn-color: var(--bs-white);
-            --bs-btn-bg: var(--bd-violet-bg);
-            --bs-btn-border-color: var(--bd-violet-bg);
-            --bs-btn-hover-color: var(--bs-white);
-            --bs-btn-hover-bg: #6528e0;
-            --bs-btn-hover-border-color: #6528e0;
-            --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
-            --bs-btn-active-color: var(--bs-btn-hover-color);
-            --bs-btn-active-bg: #5a23c8;
-            --bs-btn-active-border-color: #5a23c8;
-        }
+        /*    --bs-btn-font-weight: 600;*/
+        /*    --bs-btn-color: var(--bs-white);*/
+        /*    --bs-btn-bg: var(--bd-violet-bg);*/
+        /*    --bs-btn-border-color: var(--bd-violet-bg);*/
+        /*    --bs-btn-hover-color: var(--bs-white);*/
+        /*    --bs-btn-hover-bg: #6528e0;*/
+        /*    --bs-btn-hover-border-color: #6528e0;*/
+        /*    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);*/
+        /*    --bs-btn-active-color: var(--bs-btn-hover-color);*/
+        /*    --bs-btn-active-bg: #5a23c8;*/
+        /*    --bs-btn-active-border-color: #5a23c8;*/
+        /*}*/
 
         .bd-mode-toggle {
             z-index: 1500;
@@ -208,23 +208,25 @@
         <div class="carousel-item active" style="background: url('images/banner_1.jpg') no-repeat; background-size: cover; background-position: center;">
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+            <div class="container"
             <div class="container" >
                 <div class="carousel-caption text-start" >
                     <h1>겨울 시즌 오프 할인</h1>
 <!--                                <img src="images/banner_1.jpg" alt="겨울">-->
                     <p class="opacity-75">저렴한 금액에 구입하세요</p>
-                    <p><a class="btn btn-lg btn-primary" href="winterPage.html">더 보기</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="codelap-movie-category.html.html">더 보기</a></p>
                 </div>
             </div>
         </div>
 
         <div class="carousel-item" style="background: url('images/banner_2.jpg') no-repeat; background-size: cover; background-position: center;">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
             <div class="container">
                 <div class="carousel-caption">
                     <h1>봄 신상 할인</h1>
                     <p>2024 봄 신상품 할인</p>
-                    <p><a class="btn btn-lg btn-primary" href="springPage.html">더 보기</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="codelap-movie-category.html.htmll">더 보기</a></p>
                 </div>
             </div>
         </div>
@@ -235,7 +237,7 @@
                 <div class="carousel-caption text-end">
                     <h1>아웃 도어 신상품 출시</h1>
                     <p>설산을 향해</p>
-                    <p><a class="btn btn-lg btn-primary" href="outdoorPage.html">구매하기</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="codelap-movie-category.html.html">구매하기</a></p>
                 </div>
             </div>
         </div>
