--- a/codelap-movie-main-ver1.html
+++ b/codelap-movie-main-ver1.html
@@ -206,38 +206,38 @@
     <div class="carousel-inner"  >
 
         <div class="carousel-item active" style="background: url('images/banner_1.jpg') no-repeat; background-size: cover; background-position: center;">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-            <div class="container"
+<!--            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">-->
+<!--                <rect width="100%" height="100%" fill="var(&#45;&#45;bs-secondary-color)"/></svg>-->
+
             <div class="container" >
                 <div class="carousel-caption text-start" >
-                    <h1>겨울 시즌 오프 할인</h1>
-<!--                                <img src="images/banner_1.jpg" alt="겨울">-->
-                    <p class="opacity-75">저렴한 금액에 구입하세요</p>
-                    <p><a class="btn btn-lg btn-primary" href="codelap-movie-category.html.html">더 보기</a></p>
+<!--                    <h1>겨울 시즌 오프 할인</h1>-->
+<!--&lt;!&ndash;                                <img src="images/banner_1.jpg" alt="겨울">&ndash;&gt;-->
+<!--                    <p class="opacity-75">저렴한 금액에 구입하세요</p>-->
+                    <p><a class="btn btn-lg btn-primary" href="codelap-movie-category.html">더 보기</a></p>
                 </div>
             </div>
         </div>
 
         <div class="carousel-item" style="background: url('images/banner_2.jpg') no-repeat; background-size: cover; background-position: center;">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+<!--            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">-->
+<!--                <rect width="100%" height="100%" fill="var(&#45;&#45;bs-secondary-color)"/></svg>-->
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>봄 신상 할인</h1>
-                    <p>2024 봄 신상품 할인</p>
-                    <p><a class="btn btn-lg btn-primary" href="codelap-movie-category.html.htmll">더 보기</a></p>
+<!--                    <h1>봄 신상 할인</h1>-->
+<!--                    <p>2024 봄 신상품 할인</p>-->
+                    <p><a class="btn btn-lg btn-primary" href="codelap-movie-category.html">더 보기</a></p>
                 </div>
             </div>
         </div>
 
         <div class="carousel-item" style="background: url('images/banner_3.jpg') no-repeat; background-size: cover; background-position: center;">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+<!--            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(&#45;&#45;bs-secondary-color)"/></svg>-->
             <div class="container">
                 <div class="carousel-caption text-end">
-                    <h1>아웃 도어 신상품 출시</h1>
-                    <p>설산을 향해</p>
-                    <p><a class="btn btn-lg btn-primary" href="codelap-movie-category.html.html">구매하기</a></p>
+<!--                    <h1>아웃 도어 신상품 출시</h1>-->
+<!--                    <p>설산을 향해</p>-->
+                    <p><a class="btn btn-lg btn-primary" href="codelap-movie-category.html">더 보기</a></p>
                 </div>
             </div>
         </div>
