--- a/codelap-movie-jspagecgtest.html
+++ b/codelap-movie-jspagecgtest.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html lang="en"> <!--lang="ar" dir="rtl" data-bs-theme="auto">-->
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -141,7 +141,7 @@
     </button>
     <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
         <li>
-            <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false">
+            <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="false">
                 <svg class="bi me-2 opacity-50 theme-icon" width="1em" height="1em"><use href="#sun-fill"></use></svg>
                 Light
                 <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
