js commit complete home

--- a/codelap-movie-jh-kor-movie.html
+++ b/codelap-movie-jh-kor-movie.html
@@ -8,6 +8,7 @@
     <script src="js/movie_array.js"></script>
 
     <script>
+        $("html").attr("data-bs-theme","dark");
         var img_src;
 
 
