--- a/codelap-movie-category.html
+++ b/codelap-movie-category.html
@@ -17,6 +17,8 @@
 
     </style>
     <script>
+
+        $("html").attr("data-bs-theme","dark");
         var img_src;
 
         $(function () {
@@ -26,7 +28,7 @@
                     $(".gallery").append("<div class='gallery-item'>" +
                         "<img src='" + movieArray[i][1] + "' alt='ab' id='" + movieArray[i][0] + "'>" +
 
-                        "<iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>" +
+                        "<iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>" +
                         "<h4>" + movieArray[i][3] + "</h4></div>");
                 //}
 
