--- a/codelap-movie-jh-eng-movie.html
+++ b/codelap-movie-jh-eng-movie.html
@@ -9,6 +9,7 @@
     <script src="js/movie_array.js"></script>
 
     <script>
+        $("html").attr("data-bs-theme","dark");
         var img_src;
 
 
@@ -571,6 +572,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script>
+
     //recent Action
     //     document.getElementById('openModalBtn').addEventListener('click', function()
     function recentAction(indexMA) {
