commit test! 240118 첫번째 커밋 테스트 오전2!!

--- a/noticeBoard_jhoho.html
+++ b/noticeBoard_jhoho.html
@@ -137,7 +137,19 @@
 
 
     </style>
+<script>
 
+    $(function(){
+        // function add(){
+        //     alert("시작");
+        // }
+
+        $("#add").on("click", function(){
+            alert("시작");
+        });
+    });
+
+</script>
 
     <!-- Custom styles for this template -->
     <link href="offcanvas-navbar.css" rel="stylesheet">
