JHLee commit complete

--- a/codelap-movie-jh-eng-movie.html
+++ b/codelap-movie-jh-eng-movie.html
@@ -19,7 +19,7 @@
                 $(".gallery").append("<div class='gallery-item'>" +
                     "<img src='" + movieArray[i][1] + "' alt='ab' id='" + movieArray[i][0] + "'>" +
 
-                    "<iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>" +
+                    "<iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>" +
                     // "<iframe style='display:none' width='100' height='100%' src='https://www.youtube.com/embed/64aNeYsa6Iw?autoplay=1&mute=1' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='0'></iframe>" +
                     "<h4>" + movieArray[i][3] + "</h4></div>");
             }
@@ -168,61 +168,66 @@
     <div class="gallery">
 
         <!--            class gallery-item 시작입니다.-->
+
+
         <div class='gallery-item'>
             <img src="images/eng_1.jpg" alt='eng_1' id="101">
-            <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+            <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
             <h3> 제목 : 아바타 </h3>
             <h5> 감독 : 제임스 카메론</h5>
         </div>
         <!--            class gallery-item 끝입니다.-->
         <div class='gallery-item'>
             <img src="images/eng_2.jpg" alt='eng_2' id="102">
-            <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+            <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
             <h3> 제목 : 겨울왕국 </h3>
             <h5> 감독 : 크리스 벅, 제니퍼 리</h5>
         </div>
         <div class='gallery-item'>
             <img src="images/eng_3.jpg" alt='eng_3' id="103">
-            <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+            <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
             <h3> 제목 : 인터스텔라 </h3>
             <h5> 감독 : 크리스토퍼 놀란</h5>
         </div>
         <div class='gallery-item'>
             <img src="images/eng_4.jpg" alt='eng_4' id="104">
-            <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+            <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
             <h3> 제목 : 레미제라블 </h3>
             <h5> 감독 : 톰 후퍼</h5>
         </div>
         <div class='gallery-item'>
             <img src="images/eng_5.jpg" alt='eng_5' id="105">
-            <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+            <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
             <h3> 제목 : 케리비안의 해적 </h3>
             <h5> 감독 : 고어 버빈스키</h5>
         </div>
         <div class='gallery-item'>
             <img src="images/eng_6.jpg" alt='eng_6' id="106">
-            <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+            <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
             <h3> 제목 : 러브 액츄얼리 </h3>
             <h5> 감독 : 리차드 커티스</h5>
         </div>
         <div class='gallery-item'>
             <img src="images/eng_7.jpg" alt='eng_7' id="107">
-            <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+            <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
             <h3> 제목 : 라라랜드 </h3>
             <h5> 감독 : 데이미언 셔젤</h5>
         </div>
         <div class='gallery-item'>
             <img src="images/eng_8.jpg" alt='eng_8' id="108">
-            <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+            <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
             <h3> 제목 : 조커 </h3>
             <h5> 감독 : 토드 필립스</h5>
         </div>
         <div class='gallery-item'>
             <img src="images/eng_9.jpg" alt='eng_9' id="109">
-            <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+            <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
             <h3> 제목 : 타이타닉 </h3>
             <h5> 감독 : 제임스 카메론</h5>
         </div>
+
+
+
 <!--        <div class='gallery-item'>-->
 <!--            <img src="images/kor_10.jpg" alt='kor_10' id="10">-->
 <!--            <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>-->
