--- a/codelap-movie-jh-home-movie.html
+++ b/codelap-movie-jh-home-movie.html
@@ -35,7 +35,7 @@
                     "<img src='" + movieArray[i][1] + "' alt='ab' id='" + movieArray[i][0] + "'>" +
 
 
-                    "<iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>" +
+                    "<iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>" +
                     // "<iframe style='display:none' width='100' height='100%' src='https://www.youtube.com/embed/64aNeYsa6Iw?autoplay=1&mute=1' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='0'></iframe>" +
                     "<h4>" + movieArray[i][3] + "</h4></div>");
             }
@@ -193,92 +193,92 @@
 <!--            class gallery-item 시작입니다.-->
             <div class='gallery-item'>
                 <img src="images/kor_1.jpg" alt='kor_1' id="1">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 괴물 </h3>
                 <h5> 출연진 : 송강호 등등</h5>
             </div>
 <!--            class gallery-item 끝입니다.-->
             <div class='gallery-item'>
                 <img src="images/kor_2.jpg" alt='kor_2' id="2">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 도둑들 </h3>
                 <h5> 출연진 : 전지현 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_3.jpg" alt='kor_3' id="3">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 7번방의 선물 </h3>
                 <h5> 출연진 : 갈소원 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_4.jpg" alt='kor_4' id="4">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 광해 </h3>
                 <h5> 출연진 : 이병헌 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_5.jpg" alt='kor_5' id="5">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 국가대표 </h3>
                 <h5> 출연진 : 하정우 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_6.jpg" alt='kor_6' id="6">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 실미도 </h3>
                 <h5> 출연진 : 설경구 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_7.jpg" alt='kor_7' id="7">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 태극기 휘날리며 </h3>
                 <h5> 출연진 : 장동건 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_8.jpg" alt='kor_8' id="8">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 왕의 남자 </h3>
                 <h5> 출연진 : 이준기 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_9.jpg" alt='kor_9' id="9">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 해운대 </h3>
                 <h5> 출연진 : 하지원 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_10.jpg" alt='kor_10' id="10">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 엽기적인 그녀 </h3>
                 <h5> 출연진 : 전지현 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_11.jpg" alt='kor_11' id="11">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 검은 사제들 </h3>
                 <h5> 출연진 : 박소담, 강동원 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_12.jpg" alt='kor_12' id="12">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 내 머릿속의 지우개 </h3>
                 <h5> 출연진 : 정우성, 손예진 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_13.jpg" alt='kor_13' id="13">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 클래식 </h21>
                 <h5> 출연진 : 손예진, 조인성 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_14.jpg" alt='kor_14' id="14">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 콜 </h3>
                 <h5> 출연진 : 박신혜 등등</h5>
             </div>
             <div class='gallery-item'>
                 <img src="images/kor_15.jpg" alt='kor_15' id="15">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
+                <iframe style='display:none' width='100%' height='100%' src='loading.html' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h3> 제목 : 곡성 </h3>
                 <h5> 출연진 : 곽도원 등등</h5>
             </div>
