JHLee commit complete

--- a/codelap-movie-jh-home-movie.html
+++ b/codelap-movie-jh-home-movie.html
@@ -156,9 +156,9 @@
                         <li class="nav-item"><a class="nav-link" href="#">
                             <svg class="bi" width="24" height="24"><use xlink:href="#aperture"/></svg>
                         </a></li>
-                        <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-home-movie.html" target="_blank">HOME</a></li>
-                        <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-kor-movie.html" target="_blank">국내영화</a></li>
-                        <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-eng-movie.html" target="_blank">해외영화</a></li>
+                        <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-home-movie.html">HOME</a></li>
+                        <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-kor-movie.html">국내영화</a></li>
+                        <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-eng-movie.html">해외영화</a></li>
                         <li class="nav-item"><a class="nav-link" href="winterPage.html">인기영화</a></li>
                         <!--            <li class="nav-item"><a class="nav-link" href="winterPage.html">여성복</a></li>-->
                         <li class="nav-item"><a class="nav-link" href="winterPage.html">카테고리별</a></li>
