JHLee commit complete

--- a/codelap-movie-jh-notice-movie.html
+++ b/codelap-movie-jh-notice-movie.html
@@ -202,11 +202,11 @@
             </a></li>
             <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-kor-movie.html">한국영화</a></li>
             <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-eng-movie.html">해외영화</a></li>
-            <li class="nav-item"><a class="nav-link" href="codelap-movie-category.html">장르별영화</a></li>
+            <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-gen-movie.html">장르별영화</a></li>
             <!--            <li class="nav-item"><a class="nav-link" href="winterPage.html">남성복</a></li>-->
             <!--            <li class="nav-item"><a class="nav-link" href="winterPage.html">여성복</a></li>-->
             <!--                <li class="nav-item"><a class="nav-link" href="winterPage.html"></a></li>-->
-            <li class="nav-item"><a class="nav-link" href="noticeBoard.html">게시판</a></li>
+            <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-notice-movie.html">게시판</a></li>
             <li class="nav-item"><a class="nav-link" href="#"></a></li>
             <!--                <li class="nav-item"><a class="nav-link" href="#"> 로그인-->
             <!--                    <svg class="bi" width="10" height="10"><use xlink:href="#aperture"/></svg>-->
