--- a/codelap-movie-jh-main-movie.html
+++ b/codelap-movie-jh-main-movie.html
@@ -147,7 +147,7 @@
                 <!--            <li class="nav-item"><a class="nav-link" href="winterPage.html">남성복</a></li>-->
                 <!--            <li class="nav-item"><a class="nav-link" href="winterPage.html">여성복</a></li>-->
 <!--                <li class="nav-item"><a class="nav-link" href="winterPage.html"></a></li>-->
-                <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-notice.html">게시판</a></li>
+                <li class="nav-item"><a class="nav-link" href="codelap-movie-jh-notice-movie.html">게시판</a></li>
                 <li class="nav-item"><a class="nav-link" href="#"></a></li>
 <!--                <li class="nav-item"><a class="nav-link" href="#"> 로그인-->
 <!--                    <svg class="bi" width="10" height="10"><use xlink:href="#aperture"/></svg>-->
