--- a/codelap-movie-romance.html
+++ b/codelap-movie-romance.html
@@ -2,37 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="js/jquery.js"></script>
     <link rel ="stylesheet" type="text/css" href="romance.css">
     <title>로맨틱 영화 추천</title>
 </head>
     <script>
-
+        $(document).ready(function () {
+            $(".size1>.btn0").click(function () {
+                var box = $(this).closest('.size1').find('.box');
+                if (box.is(":visible")) {
+                    box.slideUp();
+                } else {
+                    box.slideDown();
+                }
+            });
+        });
     </script>
+
 <body>
     <header>
         공란
     </header>
         <div class="main" >
-            <h3>이런영화 어때요?<div class="more">다양하게 둘러보기</div></h3>
+            <h3>이런영화 어때요?<div class="more1">다양하게 둘러보기</div></h3>
         </div>
         <div class="main_1">
         <section>
             <ul class="size1">
-            <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
+            <img src = "https://an2-img.amz.wtchn.net/image/v2/0GfAXX2RniqP-RsZY_Nb7A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMjltZW5GNFl6aHhZWFZqZVdSb09YQmljSFZ0SW4wLm4ybnlRaHdhemlQbFJkRi1kYXhOQ3E3dEtfNnZFcUx3d3hYcElHNHZIQkk"></a>
 <!--        김종욱 찾기     -->
                 <div class="text_0">김종욱 찾기</div>
                 <div class="text_1">개봉일:2010</div>
-                <div class="text_1">평점:3.5<div class="more">줄거리</div>
+                <div class="text_1">평점:3.5 <button class=".btn0">줄거리</button>
+                    <div class="box">
+                        <div class="box_text">
+                            줄거리 : 2:8 가르마에 호리호리한 체형, 돌다리도 두드려 보고 건너는 고지식한 성격의 소유자 한기준(공유). 지나치게 강한 책임감과 융통성 제로에 가까운 업무 능력 덕에 회사에서 잘린 기준은 우연한 기회에 기발한 창업 아이템을 찾아 낸다. 바로 아직까지 첫사랑을 잊지 못한 사람들을 위해 첫사랑을 찾아주는 일! 고객에게 무한 감동을 선사하겠다는 열정과 패기로 지체 없이 1인 기업 ‘첫사랑 찾기 사무소’를 오픈 한다. 만나던 남자친구로부터 프러포즈를 받은 서지우(임수정). 딸이 시집가기만을 학수고대하는 군인출신 홀아버지의 압박에도 불구하고 결국 프러포즈를 거절하고 만다. 뮤지컬 무대 감독으로 일에만 매달려온 그녀 맘 속에는 ‘김종욱’이라는 잊을 수 없는 사람이 있기 때문. 아버지에게 등 떠밀려 ‘첫사랑 찾기 사무소’를 찾은 서지우는 우여곡절 끝에 이제는 기억 조차 희미한 첫사랑의 상대를 찾아보기로 결심한다. 아버지에 끌려 첫사랑 찾기 사무소의 고객이 된 서지우. 그러나 그녀가 첫사랑에 대해 알고 있는 정보는 ‘김종욱’이라는 이름 석자가 전부다. 회사의 흥망성쇠를 결정할 첫 의뢰를 성공시키기 위해 필사적인 한기준은 특유의 치밀함과 꼼꼼함으로 ‘김종욱 찾기’에 나서고, 서지우는 고객감동을 위한 한기준의 지나친 열의에 화가 나다 못해 지쳐간다. 급기야 한기준은 전국에 대량 분포(?) 중인 김종욱들을 찾아나서는 여정에 동행할 것을 서지우에게 요구하는데…
+                        </div>
+                    </div>
             </ul>
             <ul class="size1">
-                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/jENE7VlqUpBKBIfpyHRing.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMmt3WjNsdlpEbDFlRzFwZUdrNVltUjZhV2xySW4wLjRjRFByUGhqQUt2c2tsdndzWmRmUmM2bjlYbGc1OWJaaWhXWXJmaEdMeWc
+                <img src = "https://an2-img.amz.wtchn.net/image/v2/jENE7VlqUpBKBIfpyHRing.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMmt3WjNsdlpEbDFlRzFwZUdrNVltUjZhV2xySW4wLjRjRFByUGhqQUt2c2tsdndzWmRmUmM2bjlYbGc1OWJaaWhXWXJmaEdMeWc
 ">
                 <div class="text_0">어바웃타임</div>
                 <div class="text_1">개봉일:2013</div>
                 <div class="text_1">평점:4.5<div class="more">줄거리</div>
             </ul>
             <ul class="size1">
-                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/PLKW45bXTvLeWY9XXDM0eQ.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMM2x0WVdsc2JXdGljbVZ0Y1RadGRuUTNaV3BuSW4wLlZQYWs3ZUxpRnhaLXJGQ2hDbm1NZUREck51dmVqQ3NaZTYzNWRqd1A3UjA" ><!--        김종욱 찾기     -->
+                <img src = "https://an2-img.amz.wtchn.net/image/v2/PLKW45bXTvLeWY9XXDM0eQ.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMM2x0WVdsc2JXdGljbVZ0Y1RadGRuUTNaV3BuSW4wLlZQYWs3ZUxpRnhaLXJGQ2hDbm1NZUREck51dmVqQ3NaZTYzNWRqd1A3UjA" ><!--        김종욱 찾기     -->
                 <div class="text_0">플랜맨</div>
                 <div class="text_1">개봉일:2013</div>
                 <div class="text_1">평점:3.5<div class="more">줄거리</div>
@@ -40,21 +56,21 @@
         </section>
         <section>
             <ul class="size1">
-                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/Lbf-6tntBHjpFUjZefUg3A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMM2RxZW1kbVkyUnBNM2xuY1RKMWVHMXNOak53SW4wLnZMc2lmR0Jpc2g1ckw3YkpUaU5HZ2xDeDMxa2I0Z21hZEJCYzhVcENxMlU">
+                <img src = "https://an2-img.amz.wtchn.net/image/v2/Lbf-6tntBHjpFUjZefUg3A.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMM2RxZW1kbVkyUnBNM2xuY1RKMWVHMXNOak53SW4wLnZMc2lmR0Jpc2g1ckw3YkpUaU5HZ2xDeDMxa2I0Z21hZEJCYzhVcENxMlU">
                     <!--        김종욱 찾기     -->
                 <div class="text_0">맘마미아</div>
                 <div class="text_1">개봉일:2008</div>
                 <div class="text_1">평점:3.8<div class="more">줄거리</div>
             </ul>
             <ul class="size1">
-                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/nxpZUYzDqkjvF3X2ZRDfAw.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXlMM04wYjNKbEwybHRZV2RsTHpFMk9UUTNOekF5TkRrMU5qVTVNalEzTURNaWZRLnRKdG1TRjJ4bnVGX3BLODg0dnExYnF1MTYyR2Y1SXR0bWRiQktydTQxZEE">
+                <img src = "https://an2-img.amz.wtchn.net/image/v2/nxpZUYzDqkjvF3X2ZRDfAw.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXlMM04wYjNKbEwybHRZV2RsTHpFMk9UUTNOekF5TkRrMU5qVTVNalEzTURNaWZRLnRKdG1TRjJ4bnVGX3BLODg0dnExYnF1MTYyR2Y1SXR0bWRiQktydTQxZEE">
                  <div class="text_0">30일</div>
                 <div class="text_1">개봉일:2023</div>
                 <div class="text_1">평점:3.2<div class="more">줄거리</div>
             </ul>
 
             <ul class="size1">
-                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/hPZzbajorJEDfMo-N-Cy6w.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXlMM04wYjNKbEwybHRZV2RsTHpFMk1UYzROalkyTXpRME1qQXhPRGMwTkRBaWZRLjM4VE5MamZzdzA4SkcyWHctMDBKWkZ0RVBCSTEtOFlTOGs2OEZQWjlDTXc">
+                <img src = "https://an2-img.amz.wtchn.net/image/v2/hPZzbajorJEDfMo-N-Cy6w.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXlMM04wYjNKbEwybHRZV2RsTHpFMk1UYzROalkyTXpRME1qQXhPRGMwTkRBaWZRLjM4VE5MamZzdzA4SkcyWHctMDBKWkZ0RVBCSTEtOFlTOGs2OEZQWjlDTXc">
                     <!--        김종욱 찾기     -->
                 <div class="text_0">플립</div>
                 <div class="text_1">개봉일:2017</div>
@@ -63,21 +79,21 @@
         </section>
         <section>
             <ul class="size1">
-                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src ="https://an2-img.amz.wtchn.net/image/v2/IixteEuc7MXKdmVDP1hK4g.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXlMM04wYjNKbEwybHRZV2RsTHpFMk56RTNOemMzTURRNE5UVXhORFl4TlRZaWZRLlkwTlhHdTFmSklqdW1HR2xmR1ZxeF9hcmFRUTZldkFLUktjVy1JUVhvTTg">
+                <img src ="https://an2-img.amz.wtchn.net/image/v2/IixteEuc7MXKdmVDP1hK4g.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXlMM04wYjNKbEwybHRZV2RsTHpFMk56RTNOemMzTURRNE5UVXhORFl4TlRZaWZRLlkwTlhHdTFmSklqdW1HR2xmR1ZxeF9hcmFRUTZldkFLUktjVy1JUVhvTTg">
                 <!--        김종욱 찾기     -->
                 <div class="text_0">상견니</div>
                 <div class="text_1">개봉일:2023</div>
                 <div class="text_1">평점:4.1<div class="more">줄거리</div>
             </ul>
             <ul class="size1">
-                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/KpEeV_M9OjsIctq0QNLTnw.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMkZ1YkdWcVoySXlaWFZuWm5WallXNW1abVl4SW4wLlp3MHlpeVV5MzliMTdjVXg1MTdLSWlRb184YWhqc3ZkRDFIZjd6WEwtMnc">
+                <img src = "https://an2-img.amz.wtchn.net/image/v2/KpEeV_M9OjsIctq0QNLTnw.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMMkZ1YkdWcVoySXlaWFZuWm5WallXNW1abVl4SW4wLlp3MHlpeVV5MzliMTdjVXg1MTdLSWlRb184YWhqc3ZkRDFIZjd6WEwtMnc">
                  <!--        김종욱 찾기     -->
                 <div class="text_0">허니와 클로버</div>
                 <div class="text_1">개봉일:2006</div>
                 <div class="text_1">평점:3.4<div class="more">줄거리</div>
             </ul>
             <ul class="size1">
-                <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "https://an2-img.amz.wtchn.net/image/v2/Dm1CV3VSKQ69YJUAy0FMNg.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMM2xuWW5sd2R6UmtNMlZxYUdGMmNHVmhNSFZ4SW4wLm9lRW5ITklPdGZCLUx4OFBGenNwSi1yZ0ZuNnBDNzFhWXRpUGVRSXMyeXc"">
+                <img src = "https://an2-img.amz.wtchn.net/image/v2/Dm1CV3VSKQ69YJUAy0FMNg.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk5Ea3dlRGN3TUhFNE1DSmRMQ0p3SWpvaUwzWXhMM2xuWW5sd2R6UmtNMlZxYUdGMmNHVmhNSFZ4SW4wLm9lRW5ITklPdGZCLUx4OFBGenNwSi1yZ0ZuNnBDNzFhWXRpUGVRSXMyeXc"">
                     <!--        김종욱 찾기     -->
                 <div class="text_0">이터널 션샤인</div>
                 <div class="text_1">개봉일:2004</div>
@@ -85,8 +101,10 @@
             </ul>
         </section>
         </div>
-        <div class="main_2">
-             <h4>1/3</h4>
-    </div>
 </body>
+<footer>
+    <div class="main_2">
+        <h4>1/3</h4>
+    </div>
+</footer>
 </html>
